--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/knex": "^0.16.1",
+    "@types/node": "^14.6.4",
+    "@types/uuid-1345": "^0.99.21",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
@@ -24,15 +30,21 @@
     "pg": "^8.3.3",
     "sqlite3": "^5.0.0",
     "superagent": "^6.1.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.13",
+    "@types/supertest": "^2.0.10",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^8.2.0",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.3.0",
+    "tslint": "^6.1.3"
   },
   "config": {
     "commitizen": {
