--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.4",
     "@types/uuid-1345": "^0.99.21",
     "bcryptjs": "^2.4.3",
