--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.4",
+    "@types/uuid": "^8.3.0",
     "@types/uuid-1345": "^0.99.21",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.5",
