--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "test": "cross-env NODE_ENV=testing jest --coverage --watch",
-    "server": "cross-env NODE_ENV=development nodemon index.js",
-    "start": "nodemon index.js"
+    "server": "cross-env NODE_ENV=development nodemon index.ts",
+    "start": "nodemon index.ts"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
+    "@types/faker": "^5.1.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.9.1",
